[project]
name = "catlink-cli"
version = "0.1.0"
description = "Command-line interface for CatLink smart litter boxes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.4",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
]

[project.scripts]
catlink = "catlink_cli.cli:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=23.11.0",
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[[tool.uv.index]]
url = "https://private.hubteam.com/pypi/simple/"
default = true
